--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shop_site</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -81,8 +81,11 @@
             </div>
             <div class="promo__content">
                 <div class="promo__info">
-                    <h1 class="promo__title">THE BRAND</h1>
-                    <h2 class="promo__heading">OF LUXERIOUS FASHION</h2>
+                    <h1 class="promo__title">THE BRAND</h1>                    
+                    <h2 class="promo__heading">
+                        <span class="of_luxerious">OF LUXERIOUS</span>
+                        <span class="fashion">FASION</span>                        
+                    </h2>                  
                 </div>
             </div>
         </section>
@@ -98,21 +101,21 @@
                 <img src="img/si2.jpg" alt="sale image">
                 <div class="sale__content">
                     <p class="sale__text">30% OFF</p>
-                    <h3 class="sale__heading">FOR WOMEN</h3>
+                    <h3 class="sale__heading">FOR MEN</h3>
                 </div>
             </div>
             <div class="sale__item">
                 <img src="img/si3.jpg" alt="sale image">
                 <div class="sale__content">
                     <p class="sale__text">30% OFF</p>
-                    <h3 class="sale__heading">FOR WOMEN</h3>
+                    <h3 class="sale__heading">FOR KIDS</h3>
                 </div>
             </div>
             <div class="sale__item sale__item_big">
                 <img src="img/sibig.jpg" alt="sale image">
                 <div class="sale__content">
                     <p class="sale__text">30% OFF</p>
-                    <h3 class="sale__heading">FOR WOMEN</h3>
+                    <h3 class="sale__heading">ACCESORIES</h3>
                 </div>
             </div>
         </section>
