--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
             <div class="sale__item">
                 <img src="img/si2.jpg" alt="sale image">
                 <div class="sale__content">
-                    <p class="sale__text">30% OFF</p>
+                    <p class="sale__text">HOT DEAL</p>
                     <h3 class="sale__heading">FOR MEN</h3>
                 </div>
             </div>
             <div class="sale__item">
                 <img src="img/si3.jpg" alt="sale image">
                 <div class="sale__content">
-                    <p class="sale__text">30% OFF</p>
+                    <p class="sale__text">NEW ARRIVALS</p>
                     <h3 class="sale__heading">FOR KIDS</h3>
                 </div>
             </div>
             <div class="sale__item sale__item_big">
                 <img src="img/sibig.jpg" alt="sale image">
                 <div class="sale__content">
-                    <p class="sale__text">30% OFF</p>
+                    <p class="sale__text">LUXIROUS & TRENDY</p>
                     <h3 class="sale__heading">ACCESORIES</h3>
                 </div>
             </div>
