hw7_desctop_768_375_final

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="product">
                     <img class="product__img" src="img/product1.jpg" alt="prod1">
                     <div class="product__content">
-                        <a href="product.html" class="product__heading">ELLERY X M'O CAPSULE</a>
+                        <a href="#" class="product__heading">ELLERY X M'O CAPSULE</a>
                         <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
                             arbiter
                             of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -152,7 +152,7 @@
                     <img class="product__img2 image" src="img/product2.png" alt="prod22"></div>
                    
                     <div class="product__content">
-                        <a href="product.html" class="product__heading">ELLERY X M'O CAPSULE</a>
+                        <a href="#" class="product__heading">ELLERY X M'O CAPSULE</a>
                         <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
                             arbiter
                             of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -175,7 +175,7 @@
                 <div class="product">
                     <img class="product__img" src="img/product3.png" alt="prod3">
                     <div class="product__content">
-                        <a href="product.html" class="product__heading">ELLERY X M'O CAPSULE</a>
+                        <a href="#" class="product__heading">ELLERY X M'O CAPSULE</a>
                         <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
                             arbiter
                             of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -198,7 +198,7 @@
                 <div class="product">
                     <img class="product__img" src="img/product4.png" alt="prod4">
                     <div class="product__content">
-                        <a href="product.html" class="product__heading">ELLERY X M'O CAPSULE</a>
+                        <a href="#" class="product__heading">ELLERY X M'O CAPSULE</a>
                         <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
                             arbiter
                             of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -221,7 +221,7 @@
                 <div class="product">
                     <img class="product__img" src="img/product5.png" alt="prod5">
                     <div class="product__content">
-                        <a href="product.html" class="product__heading">ELLERY X M'O CAPSULE</a>
+                        <a href="#" class="product__heading">ELLERY X M'O CAPSULE</a>
                         <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
                             arbiter
                             of cool Kym Ellery teams up with Moda Operandi.</p>
@@ -244,7 +244,7 @@
                 <div class="product">
                     <img class="product__img" src="img/product6.png" alt="prod6">
                     <div class="product__content">
-                        <a href="product.html" class="product__heading">ELLERY X M'O CAPSULE</a>
+                        <a href="#" class="product__heading">ELLERY X M'O CAPSULE</a>
                         <p class="product__text">Known for her sculptural takes on traditional tailoring, Australian
                             arbiter
                             of cool Kym Ellery teams up with Moda Operandi.</p>
